# CellAuto

./: CMakeLists.txt  README.md
include/: application.hpp  camera.hpp  event.hpp  grid.hpp  gui.hpp  notifier.hpp  result.hpp  time.hpp  type.hpp  window.hpp
src/: application.cpp  camera.cpp  event.cpp  gui.cpp  main.cpp  window.cpp
